Transparency fix for recent Gtk3 versions by John Coppens (http://www.jcoppens.com/soft/howto/gtk/flatstudio.en.php)

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -239,3 +239,5 @@
 @import url("gnome-applications-light.css");
 /* ---------------------------------------------------- */
 
+/* Transparency fix */
+@import url("transparencyfix.css");
