--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1,13 +1,13 @@
 /******************[ FlatStudioDark ]**********************/
 /* Default color scheme */
-@define-color base_color #2C2E2F;
-@define-color bg_color #383a3b;
-@define-color text_color #e0e0e0;
-@define-color fg_color #c0c0c0;
-@define-color selected_bg_color #4d679a;
-@define-color selected_fg_color #e9e9e9;
-@define-color tooltip_bg_color #040404;
-@define-color tooltip_fg_color #ffffff;
+@define-color base_color #002b36;
+@define-color bg_color #073642;
+@define-color text_color #93a1a1;
+@define-color fg_color #839496;
+@define-color selected_bg_color #073642;
+@define-color selected_fg_color #268bd2;
+@define-color tooltip_bg_color #073642;
+@define-color tooltip_fg_color #93a1a1;
 
 /* select  highlight-color ******************************************/
 @define-color selection_wood		#7a6642;
@@ -21,8 +21,8 @@
 @define-color selection_mono		#646464;
 /* Here you can set the color selection, I recommend one of the above,
    but you can put the one you like */
-@define-color theme_selected_bg_color 		@selection_blue;
-@define-color theme_selected_fg_color 		#e9e9e9;
+@define-color theme_selected_bg_color 		@selected_bg_color;
+@define-color theme_selected_fg_color 		@selected_fg_color;
 @define-color theme_selected_shadow_color 	alpha(#000, 0.12);
 /*******************************************************************/
 
@@ -67,7 +67,7 @@
 @define-color menu_combobox_border #3277bf;
 @define-color menu_separator shade(@menu_bg_color, 0.95);
 
-@define-color link_color #4a90d9;
+@define-color link_color #268bd2;
 @define-color frame_color #808080;
 @define-color inactive_frame_color #bbbbbb;
 @define-color warning_color #f57900;
@@ -124,7 +124,7 @@
 @define-color trough_bg_color_b shade (@theme_selected_bg_color, 0.90);
 
 
-@define-color scale_progress_fill shade (@theme_selected_bg_color, 1.00);
+@define-color scale_progress_fill shade (@theme_selected_fg_color, 1.00);
 @define-color progressbar_pattern #000000;
 
 @define-color entry_text_color @theme_text_color;
